[gd_scene load_steps=3 format=3 uid="uid://c0pegxieali4"]

[ext_resource type="Script" uid="uid://b6gpdf455nnjr" path="res://scripts/sidemenu.gd" id="1_0bpdh"]

[sub_resource type="LabelSettings" id="LabelSettings_2ckv8"]
font_size = 50
outline_size = 37
outline_color = Color(0, 0, 0, 1)

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bpdh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
layout_mode = 0
offset_left = -592.0
offset_top = -342.0
offset_right = 589.0
offset_bottom = 337.0
color = Color(0.8666667, 0.8666667, 0.30980393, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -98.0
offset_top = -323.0
offset_right = 101.0
offset_bottom = -259.0
theme_override_font_sizes/font_size = 100
text = "Credits"
label_settings = SubResource("LabelSettings_2ckv8")

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 353.0
offset_top = 257.0
offset_right = 572.0
offset_bottom = 313.0
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -547.0
offset_top = -243.0
offset_right = 547.0
offset_bottom = 224.0
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "Game by Left Sock
-----
Code - Sasha Boolba
Art - kyku1000

Music
-----
[url=https://tallbeard.itch.io/music-loop-bundle]Abstraction[/url][color=gray] <- that's a link[/color]

Font
-----
Pixelify Sans. [url=https://github.com/eifetx/Pixelify-Sans?tab=OFL-1.1-1-ov-file]License[/url]"

[node name="ColorRect2" type="ColorRect" parent="RichTextLabel"]
z_index = -10
layout_mode = 0
offset_left = -45.0
offset_top = -99.0
offset_right = 1136.0
offset_bottom = 580.0
mouse_filter = 2
color = Color(0, 0, 0, 0.30980393)

[connection signal="pressed" from="exit" to="." method="exit"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="meta_click"]
